--- a/index.html
+++ b/index.html
@@ -4,69 +4,60 @@
 <head>
   <meta charset="utf-8">
   <title>rnaprimer</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
-<table cellspacing="20">
-  <tr>
-    <td><img src="editedchintu.jpg" width="200" alt="image"></td>
-    <td>
-      <h1>rnaprimer blog</h1>
-      <p><em>founder of </em><strong><a><a href="https://rnaprimer.com">rnaprimer</a></strong></p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </td>
-  </tr>
-</table>
-<hr>
-
 
 <body>
+  <div class="a1">
+    <img class="cloud"src="image/cloud.png" alt="image">
+    <img class="cloud2"src="image/cloud.png" alt="image">
+    <h1><span>rna</span>primer</h1>
+    <h2>my blog</h2>
+    <img src="image/mountain.png" alt="image">
+  </div>
+  <div class="a2">
+    <div class="profile">
+      <img class="chintu" src="image/chintu.png" alt="image">
+      <h2>Hello.</h2>
+      <p class="intro">A polymath, who pretend to knew much but actually he really does! ahh in a nutshell it's kinda inception, don't bother.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My precious talk.</h2>
+      <div class="skill-row">
+        <img class="computer" src="image/phillo.png" alt="image">
+        <h3>thoughts</h3>
+        <p class="p1"> It might be debatable topic, but i am proud to be a fellow metacognitive person ( nerd face hehe ) to anouce that SEX, yes sex is a logical inherited fellacy which had one purpose, given to humankind
+for produce progeny but we turns this to like as flies attracted to halogen bulb. i know it's all you testosteron!
+c'mon people wake up it's a loophole, it's acting as inhibitor to our race. remmember what we are here for,
+space,cosmos , immortality!
+.</p>
+      </div>
+      <div class="skill-row">
+        <img class="chillies" src="image/phillo2.png" alt="image">
+        <h3>more thoughts</h3>
+        <p class="p2">It's like an episode, more precisely the series of episodes full of thriller, suspense, hopes and to whom of course the main menu. Every time one episode ended, it's leaves out with suspense to watch the next. it's makes you feel like you're the part of it. Yes the stalking, the stalking to your past remains. You know, you don't have any option other than to watch and accept the play. But whola on a bonus you have the judgement to decide to whom you want to make hero..</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>catch me if you can.</h3>
+      <p>hey get touch with me on insta, i'm pretty much active their.</p>
+      <a class="btn" href="https://www.rnaprimer.com/">CONTACT ME</a>
+    </div>
+  </div>
 
-  <h3>2022 lists</h3>
-  <ul>
-    <li>do epic shit</li>
-    <li>atomic habit</li>
-  </ul>
-  <h3>work expirience</h3>
-  <table  cellspacing="10">
-    <thead>
-      <th>year</th>
-      <th>works</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2012-2019</td>
-        <td>sainik school</td>
-      </tr>
-      <tr>
-        <td>2019</td>
-        <td>drop out</td>
-      </tr>
-    </tbody>
-    <tfoot>
 
-    </tfoot>
-  </table>
-  <h3>skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>english </td>
-      <td>⭐⭐⭐⭐</td>
-      <td>hindi</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>odia</td>
-      <td> ⭐⭐⭐⭐⭐</td>
-      <td>french</td>
-      <td>⭐</td>
-    </tr>
-
-  </table>
-  <hr>
-  <a href="hobbies.html">my hobbies</a>
-  <h3>contact us</h3>
-  <a href="contact.html"> contact </a>
+  <div class="a3">
+    <a class="footer-link" href="https://www.instagram.com/rnaprimer/">Instagram</a>
+    <a class="footer-link" href="https://www.rnaprimer.com/">Website</a>
+    <p>© rnaprimer.</p>
+  </div>
 
 
 </body>
